// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Login test 1`] = `
<div>
  <div
    class="nut-login"
  >
    <div
      class="nut-login__logo"
    >
      <img
        src="https://img10.360buyimg.com/imagetools/jfs/t1/187998/28/32123/16333/63e346b8F0bff354b/c95da99ea108c463.png"
      />
    </div>
    <div
      class="nut-login__content"
    >
      <div
        class="input-wrap "
      >
        <div
          class="input-item"
        >
          <div
            class="nut-input  nut-input-text"
          >
            <div
              class="nut-input-value"
            >
              <div
                class="nut-input-main-con"
              >
                <div
                  class="nut-input-inner"
                >
                  <input
                    class="input-text"
                    maxlength="9999"
                    name="account"
                    placeholder="请输入账号"
                    style="text-align: left;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="input-wrap "
      >
        <div
          class="input-item"
        >
          <div
            class="nut-input  nut-input-text"
          >
            <div
              class="nut-input-value"
            >
              <div
                class="nut-input-main-con"
              >
                <div
                  class="nut-input-inner"
                >
                  <input
                    class="input-text"
                    maxlength="9999"
                    name="password"
                    placeholder="请输入账号密码"
                    style="text-align: left;"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="pwd-hide-icon"
          >
            <i
              class="nutui-iconfont nut-icon nut-icon-marshalling "
              style="color: rgb(204, 204, 204); font-size: 14px; height: 14px; width: 14px;"
            />
          </div>
        </div>
        <div
          class="forget-pwd"
        >
          忘记密码
        </div>
      </div>
    </div>
    <div
      class="nut-login__btn"
    >
      <button
        class="nut-button nut-button--danger nut-button--normal nut-button--square nut-button--block nut-button--disabled "
      >
        <div
          class="nut-button__warp"
        >
          <div
            class=""
          >
            登录
          </div>
        </div>
      </button>
    </div>
    <div
      class="switch-type"
    >
      手机/邮箱登录
    </div>
  </div>
</div>
`;

exports[`Verify Login test 1`] = `
<div>
  <div
    class="nut-login"
  >
    <div
      class="nut-login__logo"
    >
      <img
        src="https://img10.360buyimg.com/imagetools/jfs/t1/187998/28/32123/16333/63e346b8F0bff354b/c95da99ea108c463.png"
      />
    </div>
    <div
      class="nut-login__content"
    >
      <div
        class="input-wrap "
      >
        <div
          class="input-item"
        >
          <div
            class="nut-input  nut-input-text"
          >
            <div
              class="nut-input-value"
            >
              <div
                class="nut-input-main-con"
              >
                <div
                  class="nut-input-inner"
                >
                  <input
                    class="input-text"
                    maxlength="9999"
                    name="telOrMail"
                    placeholder="请输入手机号或邮箱"
                    style="text-align: left;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="input-wrap "
      >
        <div
          class="input-item"
        >
          <div
            class="nut-input  nut-input-text"
          >
            <div
              class="nut-input-value"
            >
              <div
                class="nut-input-main-con"
              >
                <div
                  class="nut-input-inner"
                >
                  <input
                    class="input-text"
                    maxlength="9999"
                    name="verifyCode"
                    placeholder="请输入验证码"
                    style="text-align: left;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="code-box"
          >
            获取验证码
          </div>
        </div>
      </div>
    </div>
    <div
      class="nut-login__btn"
    >
      <button
        class="nut-button nut-button--danger nut-button--normal nut-button--square nut-button--block nut-button--disabled "
      >
        <div
          class="nut-button__warp"
        >
          <div
            class=""
          >
            登录
          </div>
        </div>
      </button>
    </div>
    <div
      class="switch-type"
    >
      账号密码登录
    </div>
  </div>
</div>
`;
